--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT_URL = "3000"
-JWT_SECRET = "secretgizflhsXf[]5xP$}dku;eh[LYskPxgWO$W29f6"
+JWT_SECRET = 'gizflhsXf[]5xP$}"dku;eh[LYskPxgWO$W29f6Ss$r+CSqrus%kxZGBw@stPiW'
 
 DB_HOST = "localhost"
 DB_USER = "root"
