--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PORT_URL = "3000"
+PORT_URL = ""
 JWT_SECRET = 'gizflhsXf[]5xP$}"dku;eh[LYskPxgWO$W29f6Ss$r+CSqrus%kxZGBw@stPiW'
 
 DB_HOST = "localhost"
-DB_USER = "root"
-DB_PASSWORD = ""
+DB_USER = "SPAATech"
+DB_PASSWORD = "SPAATech@502"
 DB_NAME = "native_js"
 
 PROJECT_NAME = "NATIVE"
