--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ JWT_SECRET = 'gizflhsXf[]5xP$}"dku;eh[LYskPxgWO$W29f6Ss$r+CSqrus%kxZGBw@stPiW'
 DB_HOST = "localhost"
 DB_USER = "SPAATech"
 DB_PASSWORD = "SPAATech@502"
-DB_NAME = "native_js"
+DB_NAME = "spaatech_payroll"
 
 PROJECT_NAME = "NATIVE"
