--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ PORT_URL = ""
 JWT_SECRET = 'gizflhsXf[]5xP$}"dku;eh[LYskPxgWO$W29f6Ss$r+CSqrus%kxZGBw@stPiW'
 
 DB_HOST = "localhost"
-DB_USER = "SPAATech"
-DB_PASSWORD = "SPAATech@502"
+DB_USER = "spaatech_india"
+DB_PASSWORD = "wx^VpDvW41;Y"
 DB_NAME = "spaatech_payroll"
 
-PROJECT_NAME = "NATIVE"
+PROJECT_NAME = "Payroll"
